--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container">
+  <div class="row">
     <div class="col-md-6 offset-md-3 sign-up-box">
         <form #f="ngForm" (ngSubmit)='signIn(f)'>
             <div class="form-row">
@@ -24,4 +25,5 @@
             <button [disabled]="f.invalid" class="btn btn-primary" type="submit">Create Account</button>
           </form>
     </div>
+</div>
 </div>
