--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container">
+  <div class="row">
     <div class="col-md-6 offset-md-3 sign-up-box">
         <form #f="ngForm" (ngSubmit)='signUp(f)'>
             <div class="form-row">
@@ -82,4 +83,5 @@
             <button [disabled]="f.invalid || password.value != confirmPassword.value" class="btn btn-primary" type="submit">Create Account</button>
           </form>
     </div>
+</div>
 </div>
