--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,24 +4,29 @@
       <a routerLink="Add" class="btn btn-primary">Add product</a>
     </div>
   </div>
-  <div class="row" *ngIf="productServ.products.length == 0">
-    <div class="col-12">
-      <p class="alert alert-primary">
-        There is no product
-      </p>
+  <div *ngIf="productServ.products.length === 0 then noProducts else thereProducts " ></div>
+  <ng-template #noProducts>
+    <div class="row">
+      <div class="col-12">
+        <p class="alert alert-primary">
+          There is no product
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="row" *ngIf="productServ.products.length != 0">
-    <div class="col-md-4" *ngFor = "let product of productServ.products; index as i">
-      <div class="card mt-3" style="width: 18rem;">
-        <a [routerLink]="['Admin/', i]"><img class="card-img-top" [src]="product.urlImg" alt="{{product.name}}"></a>
-        <div class="card-body">
-          <h5 class="card-title">{{product.name | titlecase}} | {{product.price | currency}} </h5>
-          <p class="card-text">{{product.description | slice : 0 : 55 }} ... </p>
-          <a href="#" class="btn btn-primary">Add to cart <i class="fa fa-cart-plus pl-1"></i></a>
-          <a (click)="deleteProduct(i)" class="btn btn-danger float-right">Delete<i class="fa fa-trash pl-1"></i></a>
+  </ng-template>
+  <ng-template #thereProducts>
+    <div class="row">
+      <div class="col-md-4" *ngFor = "let product of productServ.products; index as i">
+        <div class="card mt-3" style="width: 18rem;">
+          <a [routerLink]="['Admin/', i]"><img class="card-img-top" [src]="product.urlImg" alt="{{product.name}}"></a>
+          <div class="card-body">
+            <h5 class="card-title">{{product.name | titlecase}} | {{product.price | currency}} </h5>
+            <p class="card-text">{{product.description | summary : 55 }} </p>
+            <a href="#" class="btn btn-primary">Add to cart <i class="fa fa-cart-plus pl-1"></i></a>
+            <a (click)="deleteProduct(i)" class="btn btn-danger float-right">Delete<i class="fa fa-trash pl-1"></i></a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </ng-template>
 </div>
