--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <a class="nav-link" routerLinkActive="active" routerLink="Admin">Admin</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="Blogs">Blogs</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link"  routerLink="Admin">Logout</a>
         </li>
       </ul>
